# lua_interpreter

./: Cargo.toml  README.md  WRITEUP.md  instruction_set.md
src/: ast.rs  bytecode.rs  chunk.rs  compiler.rs  debug.rs  env.rs  error.rs  helpers.rs  instruction.rs  lexer.rs  lib.rs  macros.rs  main.rs  math.rs  optimizer.rs  parser.rs  scope.rs  token.rs  value.rs  vm.rs
src/compiler/: block.rs  expression.rs  frame.rs  goto.rs  variable.rs
src/lexer/: compat.rs  mod.rs  numbers.rs
src/stdlib/: debug.rs  globals.rs  io.rs  math.rs  mod.rs  os.rs  package.rs  string.rs  table.rs  utf8.rs
src/stdlib/utils/: pack.rs
src/value/: attribute.rs  callable.rs  closure.rs  constant.rs  conversions.rs  metatables.rs  mod.rs  number.rs  object.rs  string.rs  table.rs  upvalue.rs  userdata.rs
src/vm/: close.rs
tests/: test.rs
tests/resources/: attributes.lua  env.lua  functions.lua  jumps.lua  varargs.lua
tests/resources/bugs/: call-stack-pollution.lua  method-call.lua  table-equality.lua  upvalue-double-capture.lua
tests/resources/stdlib/string/: packing.lua
