[package]
name = "lua_interpreter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
cpu-time = "1.0.0"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
rand = { version = "0.9.2", features = ["thread_rng"] }
regex = "1.12.2"
subslice = "0.2.3"
thiserror = "2.0.17"

[dev-dependencies]
rstest = "0.26.1"
